--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
     <title>Manish kumar | Software Engineer</title>
 </head>
 <body>
+    <div class="container">
      <nav>
-          <div class="logo">
-              <img src="./img/logo2.png">
-          </div>
-          <ul class="nav-links">
-                <li><a href="#aboutsection">About</a></li>   
-                <li><a href="#">Experience</a></li>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#" class="resume-btn">Resume</a></li>
+        <h1>Portfolio</h1>
+        <ul class="nav-links">
+            <li><a href="#aboutsection">About</a></li>   
+            <li><a href="#">Experience</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#" class="resume-btn">Resume</a></li>
         </ul>
         <div class="burger">
         	<div class="line1"></div>
@@ -28,55 +27,57 @@
         	<div class="line3"></div>
         </div>
     </nav>
-    <div class="main-content">
-        <span>Hi, my name is</span>
+    <div class="column-1">
+        <h5>Hi, my name is</h5>
         <h1>Manish Kumar.</h1>
         <h2>I build things for the web.</h2>
-        <p class="description">I'm a software engineer based in Agra, UP specializing in <br> building (and occasionally designing) exceptional websites, <br> applications, and everything in between.</p>
+        <p>I'm a software engineer based in Agra, UP specializing in building (and occasionally designing) exceptional websites, applications, and everything in between.</p>
         <a href="#" class="get-in-touch">Get in touch</a>
     </div> 
-    <div class='right-email'>
-        
+    <div class='column-2' name='aboutsection'>
+        <div class="col-1">
+            <h1>01. About Me </h1>
+            <p>Hello! I'm Manish, a software engineer based in Agra, UP.</p>
+            <p>I enjoy creating things that live on the internet, whether that be websites, applications, or anything in between. My goal is to always build products that provide pixel-perfect, performant experiences.</p>
+            <p>I am currently persuing B.Tech from <span style='color: whitesmoke;'>GLA University</span>, I have worked on various projects during my Diploma that gave me brief knowledge about different technologies.</p>
+            <p>Here are a few technologies I've been working with recently:</p>
+            <ul>
+                <li>Python</li> 
+                <li>HTML & CSS</li> 
+                <li>Android</li> 
+                <li>Java</li>
+                <li>WordPress</li>
+            </ul>
+        </div>
+        <div class="col-2 overlay">
+            <img src="./img/dp.JPG" alt="" class="profile-pic">
+        </div>
     </div>
-    <div class="left-social-icons">
-        <a href="https://www.facebook.com/profile.php?id=100005293455129" class="fa fa-facebook"></a>
-        <a href="https://www.instagram.com/manish.jat88/" class="fa fa-instagram"></a>
-        <a href="https://github.com/manishkumar17/mkc17" class="fa fa-github"></a>
-        <a href="https://www.linkedin.com/in/manish-kumar-407591163/" class="fa fa-linkedin"></a>
-        <a href="https://www.youtube.com/channel/UCHnUUWHC3yQxKPJ2GzVJQlw?" class="fa fa-youtube"></a>
-    </div>
-    <div class="vert-line1"></div>
-    <div class="vert-line2">
-    	<hr size="0.2px" noshade="0">
-    	<a href="mailto:manishky10@gmail.com">manishky10@gmail.com</a>
-    </div>
-    <div class='Aboutsection' id='aboutsection'>
-        <h1>01. About Me </h1>
-        <img src="./img/dp.JPG" alt="" class="profile-pic">
-        <!-- <hr size="0.2" class="hr-about" color="red"> -->
-        <p>
-        Hello! I'm Manish, a software engineer based in Agra, UP. <br>
-        <br>
-        I enjoy creating things that live on the internet, whether that <br> be websites, applications, or anything in between. My goal is <br> to always build products that provide pixel-perfect, <br> performant experiences. <br>
-        <br>
-        I am currently persuing B.Tech from <span style='color: whitesmoke;'>GLA University</span>, I joined <br> the engineering team at <span style='color: whitesmoke;'>Upstatement</span> where I work on a wide <br> variety of interesting and meaningful projects on a daily basis. <br>
-        <br>
-        Here are a few technologies I've been working with recently:
-        <br>
-        </p>
-        <ul class="languages">
-            <li>Python</li> 
-            <li>HTML & CSS</li> 
-            <li>Android</li> 
-            <li>Java</li>
-            <li>WordPress</li>
-        </ul>
-    </section>
+    <!-- <div class="vertical-lines">
+        <div class="row1">
+            <div class="vert-line1"></div>
+            <div class="left-social-icons">
+                <a href="https://www.facebook.com/profile.php?id=100005293455129" class="fa fa-facebook"></a>
+                <a href="https://www.instagram.com/manish.jat88/" class="fa fa-instagram"></a>
+                <a href="https://github.com/manishkumar17/mkc17" class="fa fa-github"></a>
+                <a href="https://www.linkedin.com/in/manish-kumar-407591163/" class="fa fa-linkedin"></a>
+                <a href="https://www.youtube.com/channel/UCHnUUWHC3yQxKPJ2GzVJQlw?" class="fa fa-youtube"></a>
+            </div>
+        </div>
+        <div class="row2">
+            <hr size="0.2px" noshade="0">
+            <div class="vert-line2"></div>
+            <a href="mailto:manishky10@gmail.com">manishky10@gmail.com</a>
+        </div>
+    </div> -->
+
+
 
 <!-- #1d1b38 -bg color code-->
 	<section class="footer">
     	<h3>Made with <span> &#10084; </span> by Manish chaudhary</h3>
     </section>
     <script type="text/javascript" src="app.js"></script>
+</div>
 </body>
 </html>
