--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p>I'm a software engineer based in Agra, UP specializing in building (and occasionally designing) exceptional websites, applications, and everything in between.</p>
         <a href="#" class="get-in-touch">Get in touch</a>
     </div> 
-    <div class='column-2' name='aboutsection'>
+    <div class='column-2' id='aboutsection'>
         <div class="col-1">
             <h1>01. About Me </h1>
             <p>Hello! I'm Manish, a software engineer based in Agra, UP.</p>
@@ -49,8 +49,20 @@
                 <li>WordPress</li>
             </ul>
         </div>
-        <div class="col-2 overlay">
+        <div class="col-2">
             <img src="./img/dp.JPG" alt="" class="profile-pic">
+        </div>
+    </div>
+    <div class="column-3">
+            <div class="col-3">
+                <h1>02. Achievements</h1>
+                <a href="https://coursera.org/share/76791cc6dd3b8071af9d254159b496ea"><img src="./img/python.png"></a>
+            </div>
+            <div class="col-3 para">
+                <h3>Python Basics</h3>
+                <p>A Python course certificate is a part of the specialization that is offered by Coursera.</p>
+                <a href="https://coursera.org/share/76791cc6dd3b8071af9d254159b496ea"><img src="./img/coursera-icon.svg" ></a>
+            </div>
         </div>
     </div>
     <!-- <div class="vertical-lines">
@@ -74,6 +86,8 @@
 
 
 <!-- #1d1b38 -bg color code-->
+
+
 	<section class="footer">
     	<h3>Made with <span> &#10084; </span> by Manish chaudhary</h3>
     </section>
