--- a/index.html
+++ b/index.html
@@ -54,14 +54,18 @@
         </div>
     </div>
     <div class="column-3">
-            <div class="col-3">
-                <h1>02. Achievements</h1>
-                <a href="https://coursera.org/share/76791cc6dd3b8071af9d254159b496ea"><img src="./img/python.png"></a>
-            </div>
-            <div class="col-3 para">
-                <h3>Python Basics</h3>
-                <p>A Python course certificate is a part of the specialization that is offered by Coursera.</p>
-                <a href="https://coursera.org/share/76791cc6dd3b8071af9d254159b496ea"><img src="./img/coursera-icon.svg" ></a>
+        <div class="achievement_tag">
+            <h3>02. Achievements</h3>
+        </div>
+            <div class="section section1">
+                <div class="col-3">    
+                    <a href="https://coursera.org/share/76791cc6dd3b8071af9d254159b496ea"><img src="./img/python.png"></a>
+                </div>
+                <div class="col-3 para">
+                    <h3>Python Basics</h3>
+                    <p>A Python course certificate is a part of the specialization that is offered by Coursera.</p>
+                    <a href="https://coursera.org/share/76791cc6dd3b8071af9d254159b496ea"><img src="./img/coursera-icon.svg" ></a>
+                </div>
             </div>
         </div>
     </div>
