--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <div class="container">
      <nav>
         <h1>Portfolio</h1>
-        <ul class="nav-links">
+        <ol class="nav-links">
             <li><a href="#aboutsection">About</a></li>   
             <li><a href="#">Experience</a></li>
             <li><a href="#">Work</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#" class="resume-btn">Resume</a></li>
-        </ul>
+        </ol>
         <div class="burger">
         	<div class="line1"></div>
         	<div class="line2"></div>
@@ -67,35 +67,30 @@
                     <a href="https://coursera.org/share/76791cc6dd3b8071af9d254159b496ea"><img src="./img/coursera-icon.svg" ></a>
                 </div>
             </div>
+    </div>
+    <section class="footer">
+    	<h3>Made with <span> &#10084; </span> by Manish chaudhary</h3>
+    </section>
+</div>
+    
+    <div class="left-line">
+        <hr size="50" noshade="0">
+        <div class="left-social-icons">
+            <a href="https://www.facebook.com/profile.php?id=100005293455129" class="fa fa-facebook"></a>
+            <a href="https://www.instagram.com/manish.jat88/" class="fa fa-instagram"></a>
+            <a href="https://github.com/manishkumar17/mkc17" class="fa fa-github"></a>
+            <a href="https://www.linkedin.com/in/manish-kumar-407591163/" class="fa fa-linkedin"></a>
+            <a href="https://www.youtube.com/channel/UCHnUUWHC3yQxKPJ2GzVJQlw?" class="fa fa-youtube"></a>
         </div>
     </div>
-    <!-- <div class="vertical-lines">
-        <div class="row1">
-            <div class="vert-line1"></div>
-            <div class="left-social-icons">
-                <a href="https://www.facebook.com/profile.php?id=100005293455129" class="fa fa-facebook"></a>
-                <a href="https://www.instagram.com/manish.jat88/" class="fa fa-instagram"></a>
-                <a href="https://github.com/manishkumar17/mkc17" class="fa fa-github"></a>
-                <a href="https://www.linkedin.com/in/manish-kumar-407591163/" class="fa fa-linkedin"></a>
-                <a href="https://www.youtube.com/channel/UCHnUUWHC3yQxKPJ2GzVJQlw?" class="fa fa-youtube"></a>
-            </div>
-        </div>
-        <div class="row2">
-            <hr size="0.2px" noshade="0">
-            <div class="vert-line2"></div>
-            <a href="mailto:manishky10@gmail.com">manishky10@gmail.com</a>
-        </div>
-    </div> -->
-
-
-
+    <div class="right-line">   
+        <hr size="50" noshade="0">
+        <a href="mailto:manishky10@gmail.com">manishky10@gmail.com</a>
+    </div>
 <!-- #1d1b38 -bg color code-->
 
 
-	<section class="footer">
-    	<h3>Made with <span> &#10084; </span> by Manish chaudhary</h3>
-    </section>
+
     <script type="text/javascript" src="app.js"></script>
-</div>
 </body>
 </html>
