--- a/index.html
+++ b/index.html
@@ -12,84 +12,97 @@
 </head>
 <body>
     <div class="container">
-     <nav>
-        <h1>Portfolio</h1>
-        <ol class="nav-links">
-            <li><a href="#aboutsection">About</a></li>   
-            <li><a href="#">Experience</a></li>
-            <li><a href="#">Work</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#" class="resume-btn">Resume</a></li>
-        </ol>
-        <div class="burger">
-        	<div class="line1"></div>
-        	<div class="line2"></div>
-        	<div class="line3"></div>
-        </div>
-    </nav>
-    <div class="column-1">
-        <h5>Hi, my name is</h5>
-        <h1>Manish Kumar.</h1>
-        <h2>I build things for the web.</h2>
-        <p>I'm a software engineer based in Agra, UP specializing in building (and occasionally designing) exceptional websites, applications, and everything in between.</p>
-        <a href="#" class="get-in-touch">Get in touch</a>
-    </div> 
-    <div class='column-2' id='aboutsection'>
-        <div class="col-1">
-            <h1>01. About Me </h1>
-            <p>Hello! I'm Manish, a software engineer based in Agra, UP.</p>
-            <p>I enjoy creating things that live on the internet, whether that be websites, applications, or anything in between. My goal is to always build products that provide pixel-perfect, performant experiences.</p>
-            <p>I am currently persuing B.Tech from <span style='color: whitesmoke;'>GLA University</span>, I have worked on various projects during my Diploma that gave me brief knowledge about different technologies.</p>
-            <p>Here are a few technologies I've been working with recently:</p>
+        <header>
+            <nav>
+                <div class="logo">
+                    <a href="#"><h1>Portfolio</h1></a>
+                </div>
+                <div class="nav-links">
+                    <ol class="links">
+                        <li><a href="#aboutsection">About</a></li>   
+                        <li><a href="#">Experience</a></li>
+                        <li><a href="#">Work</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ol>
+                    <div class="resume-btn">
+                        <a href="#">Resume</a>
+                    </div>
+                </div>
+                <div class="burger">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
+            </nav>  
+        </header>
+        <div class="left-line">
             <ul>
-                <li>Python</li> 
-                <li>HTML & CSS</li> 
-                <li>Android</li> 
-                <li>Java</li>
-                <li>WordPress</li>
+                <li><a href="https://www.facebook.com/profile.php?id=100005293455129" class="fa fa-facebook"></a></li>
+                <li><a href="https://www.instagram.com/manish.jat88/" class="fa fa-instagram"></a></li>
+                <li><a href="https://github.com/manishkumar17/mkc17" class="fa fa-github"></a></li>
+                <li><a href="https://www.linkedin.com/in/manish-kumar-407591163/" class="fa fa-linkedin"></a></li>
+                <li><a href="https://www.youtube.com/channel/UCHnUUWHC3yQxKPJ2GzVJQlw?" class="fa fa-youtube"></a></li>
             </ul>
         </div>
-        <div class="col-2">
-            <img src="./img/dp.JPG" alt="" class="profile-pic">
+        <div class="right-line">   
+            <a href="mailto:manishky10@gmail.com">manishky10@gmail.com</a>
         </div>
-    </div>
-    <div class="column-3">
-        <div class="achievement_tag">
-            <h3>02. Achievements</h3>
-        </div>
-            <div class="section section1">
-                <div class="col-3">    
-                    <a href="https://coursera.org/share/76791cc6dd3b8071af9d254159b496ea"><img src="./img/python.png"></a>
+
+        <div class="content">
+            <div class="column column-1">
+                <h5>Hi, my name is</h5>
+                <h1>Manish Kumar.</h1>
+                <h2>I build things for the web.</h2>
+                <div> 
+                    <p>I'm a software engineer based in Agra, UP specializing in building (and occasionally designing) exceptional websites, applications, and everything in between.</p>
                 </div>
-                <div class="col-3 para">
-                    <h3>Python Basics</h3>
-                    <p>A Python course certificate is a part of the specialization that is offered by Coursera.</p>
-                    <a href="https://coursera.org/share/76791cc6dd3b8071af9d254159b496ea"><img src="./img/coursera-icon.svg" ></a>
+                <a href="mailto: manishky10@gmail.com" class="get-in-touch">Get in touch</a>
+            </div> 
+            <div class='column column-2' id='aboutsection'>
+                <h1>About Me </h1>
+                <div class="about-content">
+                    <div class="left">
+                        <div>
+                            <p>Hello! I'm Manish, a software engineer based in Agra, UP.</p>
+                            <p>I enjoy creating things that live on the internet, whether that be websites, applications, or anything in between. My goal is to always build products that provide pixel-perfect, performant experiences.</p>
+                            <p>I am currently persuing B.Tech from <span style='color: whitesmoke;'>GLA University</span>, I have worked on various projects during my Diploma that gave me brief knowledge about different technologies.</p>
+                            <p>Here are a few technologies I've been working with recently:</p>
+                        </div> 
+                        <ul>
+                            <li>Python</li> 
+                            <li>HTML & CSS</li> 
+                            <li>Android</li> 
+                            <li>Java</li>
+                            <li>WordPress</li>
+                        </ul>
+                    </div>
+                    <div class="right">
+                        <a href="#"><img src="./img/dp4.JPG" alt="" class="profile-pic"></a>
+                    </div>
                 </div>
+                
             </div>
-    </div>
-    <section class="footer">
-    	<h3>Made with <span> &#10084; </span> by Manish chaudhary</h3>
-    </section>
-</div>
-    
-    <div class="left-line">
-        <hr size="50" noshade="0">
-        <div class="left-social-icons">
-            <a href="https://www.facebook.com/profile.php?id=100005293455129" class="fa fa-facebook"></a>
-            <a href="https://www.instagram.com/manish.jat88/" class="fa fa-instagram"></a>
-            <a href="https://github.com/manishkumar17/mkc17" class="fa fa-github"></a>
-            <a href="https://www.linkedin.com/in/manish-kumar-407591163/" class="fa fa-linkedin"></a>
-            <a href="https://www.youtube.com/channel/UCHnUUWHC3yQxKPJ2GzVJQlw?" class="fa fa-youtube"></a>
+            <div class="column column-3">
+                <div class="achievement_tag">
+                    <h3>02. Achievements</h3>
+                </div>
+                    <div class="section section1">
+                        <div class="col-3">    
+                            <a href="https://coursera.org/share/76791cc6dd3b8071af9d254159b496ea"><img src="./img/python.png"></a>
+                        </div>
+                        <div class="col-3 para">
+                            <h3>Python Basics</h3>
+                            <p>A Python course certificate is a part of the specialization that is offered by Coursera.</p>
+                            <a href="https://coursera.org/share/76791cc6dd3b8071af9d254159b496ea"><img src="./img/coursera-icon.svg" ></a>
+                        </div>
+                    </div>
+            </div>
         </div>
-    </div>
-    <div class="right-line">   
-        <hr size="50" noshade="0">
-        <a href="mailto:manishky10@gmail.com">manishky10@gmail.com</a>
-    </div>
 <!-- #1d1b38 -bg color code-->
-
-
+<section class="footer">
+    <h3>Made with <span> &#10084; </span> by Manish chaudhary</h3>
+</section>
+</div>
 
     <script type="text/javascript" src="app.js"></script>
 </body>
