--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         </ul>
                     </div>
                     <div class="right">
-                        <a href="#"><img src="./img/dp4.JPG" alt="" class="profile-pic"></a>
+                        <a href="#"><img src="./img/dp4.jpg" class="profile-pic"></a>
                     </div>
                 </div>
                 
