--- a/index.html
+++ b/index.html
@@ -83,17 +83,14 @@
                 
             </div>
             <div class="column column-3">
-                <div class="achievement_tag">
-                    <h3>02. Achievements</h3>
-                </div>
+                    <h3 class="achieve-head">Achievements</h3>
                     <div class="section section1">
-                        <div class="col-3">    
-                            <a href="https://coursera.org/share/76791cc6dd3b8071af9d254159b496ea"><img src="./img/python.png"></a>
+                        <div class="left">    
+                            <img src="./img/python.png">
                         </div>
-                        <div class="col-3 para">
+                        <div class="right">
                             <h3>Python Basics</h3>
                             <p>A Python course certificate is a part of the specialization that is offered by Coursera.</p>
-                            <a href="https://coursera.org/share/76791cc6dd3b8071af9d254159b496ea"><img src="./img/coursera-icon.svg" ></a>
                         </div>
                     </div>
             </div>
