--- a/index.html
+++ b/index.html
@@ -83,14 +83,21 @@
                 
             </div>
             <div class="column column-3">
-                    <h3 class="achieve-head">Achievements</h3>
-                    <div class="section section1">
-                        <div class="left">    
-                            <img src="./img/python.png">
+                    <h3 class="cert-heading">Certifications</h3>
+                    <div class="certificates">
+                        <div class="box box-1">
+                            <div class="inner"> 
+                                <span>i</span>  
+                                <h1>Python</h1>
+                                <p>A Python course certificate is a part of the specialization that is offered by Coursera.</p>
+                            </div>
                         </div>
-                        <div class="right">
-                            <h3>Python Basics</h3>
-                            <p>A Python course certificate is a part of the specialization that is offered by Coursera.</p>
+                        <div class="box box-2">
+                            <div class="inner">
+                                <span>i</span>   
+                                <h1>Java</h1>
+                                <p>A Python course certificate is a part of the specialization that is offered by Coursera.</p>
+                            </div>
                         </div>
                     </div>
             </div>
