--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
             <div class="column column-3">
                     <h3 class="cert-heading">Certifications</h3>
-                    <div class="certificates">
+                    <div class="certificates-box">
                         <div class="box box-1">
                             <div class="inner"> 
                                 <span>i</span>  
@@ -101,6 +101,19 @@
                         </div>
                     </div>
             </div>
+            <div class="column column-4">
+                <h3 class="projects-heading">Projects</h3>
+                <div class="project-box">
+                    <div class="box box-1">
+                        <h1>Landing Page</h1>
+                        <a href="https://manishkumar17.github.io/ecommerce-page/"><i class="fa fa-github"></i></a>
+                    </div>
+                    <div class="box box-2">
+                        <h1>Landing Page</h1>
+                        <a href="https://manishkumar17.github.io/Landing-page-/"><i class="fa fa-github"></i></a>
+                    </div>
+                </div>
+        </div>
         </div>
 <!-- #1d1b38 -bg color code-->
 <section class="footer">
