--- a/index.html
+++ b/index.html
@@ -1,126 +1,141 @@
 <!DOCTYPE html>
-<html<!--  lang="en">
-<head>
-    <link rel="stylesheet" href="css.css">
-    <link href="https://fonts.googleapis.com/css2?family=Varela&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="responsive.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manish kumar | Software Engineer</title>
-</head>
-<body>
-    <div class="container">
-        <header>
-            <nav>
-                <div class="logo">
-                    <a href="#"><h1>Portfolio</h1></a>
-                </div>
-                <div class="nav-links">
-                    <ol class="links">
-                        <li><a href="#aboutsection">About</a></li>   
-                        <li><a href="#">Experience</a></li>
-                        <li><a href="#">Work</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ol>
-                    <div class="resume-btn">
-                        <a href="#">Resume</a>
-                    </div>
-                </div>
-                <div class="burger">
-                    <div class="line1"></div>
-                    <div class="line2"></div>
-                    <div class="line3"></div>
-                </div>
-            </nav>  
-        </header>
-        <div class="left-line">
-            <ul>
-                <li><a href="https://www.facebook.com/profile.php?id=100005293455129" class="fa fa-facebook"></a></li>
-                <li><a href="https://www.instagram.com/manish.jat88/" class="fa fa-instagram"></a></li>
-                <li><a href="https://github.com/manishkumar17/mkc17" class="fa fa-github"></a></li>
-                <li><a href="https://www.linkedin.com/in/manish-kumar-407591163/" class="fa fa-linkedin"></a></li>
-                <li><a href="https://www.youtube.com/channel/UCHnUUWHC3yQxKPJ2GzVJQlw?" class="fa fa-youtube"></a></li>
-            </ul>
-        </div>
-        <div class="right-line">   
-            <a href="mailto:manishky10@gmail.com">manishky10@gmail.com</a>
-        </div>
+<html<!-- lang="en">
 
-        <div class="content">
-            <div class="column column-1">
-                <h5>Hi, my name is</h5>
-                <h1>Manish Kumar.</h1>
-                <h2>I build things for the web.</h2>
-                <div> 
-                    <p>I'm a software engineer based in Agra, UP specializing in building (and occasionally designing) exceptional websites, applications, and everything in between.</p>
-                </div>
-                <a href="mailto: manishky10@gmail.com" class="get-in-touch">Get in touch</a>
-            </div> 
-            <div class='column column-2' id='aboutsection'>
-                <h1>About Me </h1>
-                <div class="about-content">
-                    <div class="left">
-                        <div>
-                            <p>Hello! I'm Manish, a software engineer based in Agra, UP.</p>
-                            <p>I enjoy creating things that live on the internet, whether that be websites, applications, or anything in between. My goal is to always build products that provide pixel-perfect, performant experiences.</p>
-                            <p>I am currently persuing B.Tech from <span style='color: whitesmoke;'>GLA University</span>, I have worked on various projects during my Diploma that gave me brief knowledge about different technologies.</p>
-                            <p>Here are a few technologies I've been working with recently:</p>
-                        </div> 
-                        <ul>
-                            <li>Python</li> 
-                            <li>HTML & CSS</li> 
-                            <li>Android</li> 
-                            <li>Java</li>
-                            <li>WordPress</li>
-                        </ul>
+    <head>
+        <link rel="stylesheet" href="css.css">
+        <link href="https://fonts.googleapis.com/css2?family=Varela&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="responsive.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Manish kumar | Software Engineer</title>
+    </head>
+
+    <body>
+        <div class="container">
+            <header>
+                <nav>
+                    <div class="logo">
+                        <a href="#">
+                            <h1>Portfolio</h1>
+                        </a>
                     </div>
-                    <div class="right">
-                        <a href="#"><img src="./img/dp4.jpg" class="profile-pic"></a>
+                    <div class="nav-links">
+                        <ol class="links">
+                            <li><a href="#aboutsection">About</a></li>
+                            <li><a href="#certifications">Certifications</a></li>
+                            <li><a href="#projects">Projects</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ol>
+                        <div class="resume-btn">
+                            <a href="https://drive.google.com/file/d/13k3lOYY_-BsSt77T08WQ1Vozcu0IBRBg/view?ths=true">Resume</a>
+                        </div>
                     </div>
-                </div>
-                
+                    <div class="burger">
+                        <div class="line1"></div>
+                        <div class="line2"></div>
+                        <div class="line3"></div>
+                    </div>
+                </nav>
+            </header>
+            <div class="left-line">
+                <ul>
+                    <li><a href="https://www.facebook.com/profile.php?id=100005293455129" class="fa fa-facebook"></a>
+                    </li>
+                    <li><a href="https://www.instagram.com/manish.jat88/" class="fa fa-instagram"></a></li>
+                    <li><a href="https://github.com/manishkumar17/mkc17" class="fa fa-github"></a></li>
+                    <li><a href="https://www.linkedin.com/in/manish-kumar-407591163/" class="fa fa-linkedin"></a></li>
+                    <li><a href="https://www.youtube.com/channel/UCHnUUWHC3yQxKPJ2GzVJQlw?" class="fa fa-youtube"></a>
+                    </li>
+                </ul>
             </div>
-            <div class="column column-3">
+            <div class="right-line">
+                <a href="mailto:manishky10@gmail.com">manishky10@gmail.com</a>
+            </div>
+
+            <div class="content">
+                <div class="column column-1">
+                    <h5>Hi, my name is</h5>
+                    <h1>Manish Kumar.</h1>
+                    <h2>I build things for the web.</h2>
+                    <div>
+                        <p>I'm a software engineer based in Agra, UP specializing in building (and occasionally
+                            designing) exceptional websites, applications, and everything in between.</p>
+                    </div>
+                    <a href="mailto: manishky10@gmail.com" class="get-in-touch">Get in touch</a>
+                </div>
+                <div class='column column-2' id='aboutsection'>
+                    <h1>About Me </h1>
+                    <div class="about-content">
+                        <div class="left">
+                            <div>
+                                <p>Hello! I'm Manish, a software engineer based in Agra, UP.</p>
+                                <p>I enjoy creating things that live on the internet, whether that be websites,
+                                    applications, or anything in between. My goal is to always build products that
+                                    provide pixel-perfect, performant experiences.</p>
+                                <p>I am currently persuing B.Tech from <span style='color: whitesmoke;'>GLA
+                                        University</span>, I have worked on various projects during my Diploma that gave
+                                    me brief knowledge about different technologies.</p>
+                                <p>Here are a few technologies I've been working with recently:</p>
+                            </div>
+                            <ul>
+                                <li>Java</li>
+                                <li>Python</li>
+                                <li>React</li>
+                                <li>MongoDb</li>
+                                <li>Node</li>
+                                <li>Flutter</li>
+                            </ul>
+                        </div>
+                        <div class="right">
+                            <a href="#"><img src="./img/dp1.jpg" class="profile-pic"></a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="column column-3" id="certifications">
                     <h3 class="cert-heading">Certifications</h3>
                     <div class="certificates-box">
                         <div class="box box-1">
-                            <div class="inner"> 
-                                <span>i</span>  
+                            <div class="inner">
+                                <span>i</span>
                                 <h1>Python</h1>
-                                <p>A Python course certificate is a part of the specialization that is offered by Coursera.</p>
+                                <p>A Python course certificate is a part of the specialization that is offered by
+                                    Coursera.</p>
                             </div>
                         </div>
                         <div class="box box-2">
                             <div class="inner">
-                                <span>i</span>   
+                                <span>i</span>
                                 <h1>Java</h1>
-                                <p>A Python course certificate is a part of the specialization that is offered by Coursera.</p>
+                                <p>A Python course certificate is a part of the specialization that is offered by
+                                    Coursera.</p>
                             </div>
                         </div>
                     </div>
-            </div>
-            <div class="column column-4">
-                <h3 class="projects-heading">Projects</h3>
-                <div class="project-box">
-                    <div class="box box-1">
-                        <h1>Landing Page</h1>
-                        <a href="https://manishkumar17.github.io/ecommerce-page/"><i class="fa fa-github"></i></a>
-                    </div>
-                    <div class="box box-2">
-                        <h1>Landing Page</h1>
-                        <a href="https://manishkumar17.github.io/Landing-page-/"><i class="fa fa-github"></i></a>
+                </div>
+                <div class="column column-4" id="projects">
+                    <h3 class="projects-heading">Projects</h3>
+                    <div class="project-box">
+                        <div class="box box-1">
+                            <h1>Landing Page</h1>
+                            <a href="https://manishkumar17.github.io/ecommerce-page/"><i class="fa fa-github"></i></a>
+                        </div>
+                        <div class="box box-2">
+                            <h1>Landing Page</h1>
+                            <a href="https://manishkumar17.github.io/Landing-page-/"><i class="fa fa-github"></i></a>
+                        </div>
                     </div>
                 </div>
+            </div>
+            <!-- #1d1b38 -bg color code-->
+            <section class="footer">
+                <h3>Made with <span> &#10084; </span> by Manish chaudhary</h3>
+            </section>
         </div>
-        </div>
-<!-- #1d1b38 -bg color code-->
-<section class="footer">
-    <h3>Made with <span> &#10084; </span> by Manish chaudhary</h3>
-</section>
-</div>
 
-    <script type="text/javascript" src="app.js"></script>
-</body>
-</html>
+        <script type="text/javascript" src="app.js"></script>
+    </body>
+
+    </html>
