added google analytics tag

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
         <link rel="stylesheet" href="responsive.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-SMV5YC91LV"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
+
+            gtag('config', 'G-SMV5YC91LV');
+        </script>
         <title>Manish kumar | Software Engineer</title>
     </head>
 
@@ -29,7 +38,8 @@
                             <li><a href="#">Contact</a></li>
                         </ol>
                         <div class="resume-btn">
-                            <a href="https://drive.google.com/file/d/13k3lOYY_-BsSt77T08WQ1Vozcu0IBRBg/view?ths=true">Resume</a>
+                            <a
+                                href="https://drive.google.com/file/d/13k3lOYY_-BsSt77T08WQ1Vozcu0IBRBg/view?ths=true">Resume</a>
                         </div>
                     </div>
                     <div class="burger">
