--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                     </div>
                     <a href="mailto: manishky10@gmail.com" class="get-in-touch">Get in touch</a>
                 </div>
-                <div class='column column-2' id='aboutsection'>
-                    <h1>About Me </h1>
+                <div class='column column-4' id='aboutsection'>
+                    <h1 class="Section-heading">About Me </h1>
                     <div class="about-content">
                         <div class="left">
                             <div>
@@ -104,8 +104,8 @@
                     </div>
 
                 </div>
-                <div class="column column-3" id="certifications">
-                    <h3 class="cert-heading">Certifications</h3>
+                <div class="column column-4" id="certifications">
+                    <h3 class="Section-heading">Certifications</h3>
                     <div class="certificates-box">
                         <div class="box box-1">
                             <div class="inner">
@@ -126,7 +126,7 @@
                     </div>
                 </div>
                 <div class="column column-4" id="projects">
-                    <h3 class="projects-heading">Projects</h3>
+                    <h3 class="Section-heading">Projects</h3>
                     <div class="project-box">
                         <div class="box box-1">
                             <h1>Landing Page</h1>
@@ -137,6 +137,14 @@
                             <a href="https://manishkumar17.github.io/Landing-page-/"><i class="fa fa-github"></i></a>
                         </div>
                     </div>
+                </div>
+                <div class="column column-4" id="contact">
+                    <h3 class="Section-heading">Contact</h3>
+                    <ul>
+                        <li><i class="fa fa-home"></i> 3/91 Bhagwati Nagar, Jeevani Colony, Tundla</li>
+                        <li><i class="fa fa-envelope"></i> <a href="mailto:manishky10@gmail.com">manishky10@gmail.com</a></li>
+                        <li><i class="fa fa-phone"></i> <a href="tel: 9557291337">9557291337</a></li>
+                    </ul>
                 </div>
             </div>
             <!-- #1d1b38 -bg color code-->
