--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <link rel="stylesheet" href="css.css">
         <link href="https://fonts.googleapis.com/css2?family=Varela&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="responsive.css">
         <meta charset="UTF-8">
@@ -67,7 +69,7 @@
             <div class="content">
                 <div class="column column-1">
                     <h5>Hi, my name is</h5>
-                    <h1>Manish Kumar.</h1>
+                    <h1 data-text="Manish Kumar">Manish Kumar.</h1>
                     <h2>I build things for the web.</h2>
                     <div>
                         <p>I'm a software engineer based in Agra, UP specializing in building (and occasionally
@@ -109,18 +111,12 @@
                     <div class="certificates-box">
                         <div class="box box-1">
                             <div class="inner">
-                                <span>i</span>
-                                <h1>Python</h1>
-                                <p>A Python course certificate is a part of the specialization that is offered by
-                                    Coursera.</p>
+                                <h3>Python.</h3>
                             </div>
                         </div>
                         <div class="box box-2">
                             <div class="inner">
-                                <span>i</span>
-                                <h1>Java</h1>
-                                <p>A Python course certificate is a part of the specialization that is offered by
-                                    Coursera.</p>
+                                <h3>Java.</h3>
                             </div>
                         </div>
                     </div>
@@ -140,11 +136,19 @@
                 </div>
                 <div class="column column-4" id="contact">
                     <h3 class="Section-heading">Contact</h3>
-                    <ul>
-                        <li><i class="fa fa-home"></i> 3/91 Bhagwati Nagar, Jeevani Colony, Tundla</li>
-                        <li><i class="fa fa-envelope"></i> <a href="mailto:manishky10@gmail.com">manishky10@gmail.com</a></li>
-                        <li><i class="fa fa-phone"></i> <a href="tel: 9557291337">9557291337</a></li>
-                    </ul>
+                    <div class="contact-grid">
+
+                        <ul class="contact-icons">
+                            <li><i class="fa fa-home"></i></li>
+                            <li><i class="fa fa-envelope"></i></li>
+                            <li><i class="fa fa-phone"></i></li>
+                        </ul>
+                        <ul class="contact-details">
+                            <li>3/91 Bhagwati Nagar, Jeevani Colony, Tundla</li>
+                            <li><a href="mailto:manishky10@gmail.com">manishky10@gmail.com</a></li>
+                            <li><a href="tel: 9557291337">9557291337</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <!-- #1d1b38 -bg color code-->
