fixed resume and contact button with responsivenes

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
             gtag('config', 'G-SMV5YC91LV');
         </script>
+
+        <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.7.570/build/pdf.min.js"></script>
         <title>Manish kumar | Software Engineer</title>
     </head>
 
@@ -28,7 +30,7 @@
             <header>
                 <nav>
                     <div class="logo">
-                        <a href="#">
+                        <a href="/">
                             <h1>Portfolio</h1>
                         </a>
                     </div>
@@ -37,11 +39,10 @@
                             <li><a href="#aboutsection">About</a></li>
                             <li><a href="#certifications">Certifications</a></li>
                             <li><a href="#projects">Projects</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="#contact">Contact</a></li>
                         </ol>
                         <div class="resume-btn">
-                            <a
-                                href="https://drive.google.com/file/d/13k3lOYY_-BsSt77T08WQ1Vozcu0IBRBg/view?ths=true">Resume</a>
+                            <a href="./pdf/resume.pdf">Resume</a>
                         </div>
                     </div>
                     <div class="burger">
@@ -123,14 +124,20 @@
                 </div>
                 <div class="column column-4" id="projects">
                     <h3 class="Section-heading">Projects</h3>
-                    <div class="project-box">
-                        <div class="box box-1">
-                            <h1>Landing Page</h1>
-                            <a href="https://manishkumar17.github.io/ecommerce-page/"><i class="fa fa-github"></i></a>
+                    <div class="project-container">
+                        <div class="master-project-box">
+                            <img src="./img/Page-1.png" alt="Project2">
+                            <div class="inner">
+                                <a href="https://manishkumar17.github.io/ecommerce-page/"><i
+                                        class="fa fa-github"></i></a>
+                            </div>
                         </div>
-                        <div class="box box-2">
-                            <h1>Landing Page</h1>
-                            <a href="https://manishkumar17.github.io/Landing-page-/"><i class="fa fa-github"></i></a>
+                        <div class="master-project-box">
+                            <img src="./img/Page-2.png" alt="Project2">
+                            <div class="inner">
+                                <a href="https://manishkumar17.github.io/Landing-page-/"><i
+                                        class="fa fa-github"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
