updated social media links

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 <ul>
                     <li><a href="https://www.facebook.com/profile.php?id=100005293455129" class="fa fa-facebook"></a>
                     </li>
-                    <li><a href="https://www.instagram.com/manish.jat88/" class="fa fa-instagram"></a></li>
-                    <li><a href="https://github.com/manishkumar17/mkc17" class="fa fa-github"></a></li>
+                    <li><a href="https://www.instagram.com/manish.jat88" class="fa fa-instagram"></a></li>
+                    <li><a href="https://github.com/manishkumar17" class="fa fa-github"></a></li>
                     <li><a href="https://www.linkedin.com/in/manish-kumar-407591163/" class="fa fa-linkedin"></a></li>
                     <li><a href="https://www.youtube.com/channel/UCHnUUWHC3yQxKPJ2GzVJQlw?" class="fa fa-youtube"></a>
                     </li>
