Added certificates and changes in the dp size.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </div>
                     <a href="mailto: manishky10@gmail.com" class="get-in-touch">Get in touch</a>
                 </div>
-                <div class='column column-4' id='aboutsection'>
+                <div class='column Common-column' id='aboutsection'>
                     <h1 class="Section-heading">About Me </h1>
                     <div class="about-content">
                         <div class="left">
@@ -102,27 +102,27 @@
                             </ul>
                         </div>
                         <div class="right">
-                            <a href="#"><img src="./img/dp1.jpg" class="profile-pic"></a>
+                            <a href="#"><img src="./img/dp.JPG" class="profile-pic"></a>
                         </div>
                     </div>
 
                 </div>
-                <div class="column column-4" id="certifications">
+                <div class="column Common-column" id="certifications">
                     <h3 class="Section-heading">Certifications</h3>
                     <div class="certificates-box">
-                        <div class="box box-1">
-                            <div class="inner">
-                                <h3>Python.</h3>
-                            </div>
+                        <div class="box" onclick="btnscale()">
                         </div>
-                        <div class="box box-2">
-                            <div class="inner">
-                                <h3>Java.</h3>
-                            </div>
+                        <div class="box" onclick="btnscale()">
+                        </div>
+                        <div class="box" onclick="btnscale()">
+                        </div>
+                        <div class="box" onclick="btnscale()">
+                        </div>
+                        <div class="box" onclick="btnscale()">
                         </div>
                     </div>
                 </div>
-                <div class="column column-4" id="projects">
+                <div class="column Common-column" id="projects">
                     <h3 class="Section-heading">Projects</h3>
                     <div class="project-container">
                         <div class="master-project-box">
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="column column-4" id="contact">
+                <div class="column Common-column" id="contact">
                     <h3 class="Section-heading">Contact</h3>
                     <div class="contact-grid">
 
@@ -165,6 +165,15 @@
         </div>
 
         <script type="text/javascript" src="app.js"></script>
+        <!-- <script>
+            box = document.getElementById("img1");
+            function btnscale() {
+                // Set image size to 1.5 times original
+                box.style.transform = "scale(1.5)";
+                // Animation effect 
+                box.style.transition = "transform 0.25s ease";
+            }
+            </script> -->
     </body>
 
     </html>
