added more certificates

--- a/index.html
+++ b/index.html
@@ -120,6 +120,14 @@
                         </div>
                         <div class="box" onclick="btnscale()">
                         </div>
+                        <div class="box" onclick="btnscale()">
+                        </div>
+                        <div class="box" onclick="btnscale()">
+                        </div>
+                        <div class="box" onclick="btnscale()">
+                        </div>
+                        <div class="box" onclick="btnscale()">
+                        </div>
                     </div>
                 </div>
                 <div class="column Common-column" id="projects">
