fixed dp redirecting and nav links anim

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             </ul>
                         </div>
                         <div class="right">
-                            <a href="#"><img src="./img/dp.JPG" class="profile-pic"></a>
+                            <a href="javascript:void(0)"><img src="./img/dp.JPG" class="profile-pic"></a>
                         </div>
                     </div>
 
