fixed some fomatting in certificates

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <ol class="links">
                             <li><a href="#aboutsection">About</a></li>
                             <li><a href="#certifications">Certifications</a></li>
-                            <li><a href="#projects">Projects</a></li>
+                            <li><a href="#work">Work</a></li>
                             <li><a href="#contact">Contact</a></li>
                         </ol>
                         <div class="resume-btn">
@@ -180,7 +180,7 @@
                 document.getElementById("hideElements").style.display = "inline-block";
             }
             function hideElements() {
-                document.getElementById("certificates-box").style.height = "510px";
+                document.getElementById("certificates-box").style.height = "470px";
                 document.getElementById("hideElements").style.display = "none";
                 document.getElementById("showElements").style.display = "inline-block";
             }
