changed font family of footer

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
     <head>
         <link rel="stylesheet" href="css.css">
+        <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Varela&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -146,7 +147,7 @@
                 </div>
                 <div class="column Common-column" id="work">
                     <h3 class="Section-heading">Some Things I’ve Built</h3>
-                        <p>Adding Soon...😉 <br>Stay tuned...</p>
+                    <p>Adding Soon...😉 <br>Stay tuned...</p>
                 </div>
                 <div class="column Common-column" id="contact">
                     <h3 class="Section-heading">Contact</h3>
