--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <nav>
                     <div class="logo">
                         <a href="/">
-                            <h1>Portfolio</h1>
+                            <img src="./img/logo.png" alt="logo">
                         </a>
                     </div>
                     <div class="nav-links">
