fixed footer style

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             <li><i class="fa fa-phone"></i></li>
                         </ul>
                         <ul class="contact-details">
-                            <li>Bhagwati Nagar, Tundla</li>
+                            <li>Tundla, Uttar Pradesh</li>
                             <li><a href="mailto:manishky10@gmail.com">manishky10@gmail.com</a></li>
                             <li><a href="tel: 9557291337">9557291337</a></li>
                         </ul>
