added pngs and improved performance

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             </ul>
                         </div>
                         <div class="right">
-                            <a href="javascript:void(0)"><img src="./img/dp.JPG" class="profile-pic"></a>
+                            <a href="javascript:void(0)"><img src="./img/profiePic.jpg" class="profile-pic"></a>
                         </div>
                     </div>
 
@@ -153,9 +153,9 @@
                     <div class="contact-grid">
 
                         <ul class="contact-icons">
-                            <li><i class="fa fa-home"></i></li>
-                            <li><i class="fa fa-envelope"></i></li>
-                            <li><i class="fa fa-phone"></i></li>
+                            <li><img src="./img/address.png" alt=""></li>
+                            <li><img src="./img/mail.png" alt=""></li>
+                            <li><img src="./img/phone.png" alt=""></li>
                         </ul>
                         <ul class="contact-details">
                             <li>Tundla, Uttar Pradesh</li>
@@ -167,7 +167,7 @@
             </div>
             <!-- #1d1b38 -bg color code-->
             <section class="footer">
-                <h3>Made with <span> &#10084; </span> by Manish chaudhary</h3>
+                <h3>Made with <span> &#10084; </span> by Manish Kumar</h3>
             </section>
         </div>
 
